--- a/design.css
+++ b/design.css
@@ -26,6 +26,29 @@ h1{
 	color: #FFF4EA;
 }
 
+.pages{
+	background-color: transparent;
+	border: none;
+	color: #FFF4EA;
+	padding-left: 60px;
+	padding-right: 60px;
+	padding-top: 2px;
+	padding-bottom: 2px;
+	text-align: center;
+	font-size: 15px;
+	transition: 0.2s;
+	cursor: pointer;
+	font-family: Century Gothic;
+	text-decoration: none;
+	border-radius: 5px;
+}
+
+.pages:hover{
+	opacity: 1;
+	background-color: #FFF4EA;
+	color: #474F7A;
+}
+
 #content{
 	position: relative;
 	float: center;
