--- a/design.css
+++ b/design.css
@@ -3,46 +3,35 @@ body{
 }
 
 #header{
-	box-shadow: 0px 8px #FFF4EA;
+    display: inline-block;
+    margin: 0;
+    padding: 10px;
+}
+ul{
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    display: inline-block;
+    vertical-align: top;
 }
 
 #nav{
-	margin-top: 0px;
-	border: #474F7A solid;
-	text-align: center;
-	padding-top: 5px;
-	padding-bottom: 5px;
-	background-color: #474F7A;
-	color: #FFF4EA;
     display: inline;
+    margin: 0 15px;
 }
 
 .pages{
-	background-color: transparent;
-	border: none;
-	color: #FFF4EA;
-	padding-left: 60px;
-	padding-right: 60px;
-	padding-top: 2px;
-	padding-bottom: 2px;
-	text-align: center;
-	font-size: 15px;
-	transition: 0.2s;
-	cursor: pointer;
-	font-family: Century Gothic;
-	text-decoration: none;
-	border-radius: 5px;
-}
-
-.pages:hover{
-	opacity: 1;
-	background-color: #FFF4EA;
-	color: #474F7A;
+    text-decoration: none;
+    color: #000;
+    font-weight: bold;
 }
 
 .navbar{
     display: flex;
+    align-items: center;
     justify-content: space-between;
+    padding: 10px 20px;
+    background-color: #f4f4f4;
 }
 
 #content{
