--- a/design.css
+++ b/design.css
@@ -11,25 +11,18 @@ ul{
     list-style-type: none;
     margin: 0;
     padding: 0;
-    display: inline-block;
-    vertical-align: top;
+    overflow: hidden;
+    background-color: #333;
 }
 
 li{
-    display: inline;
-    margin: 0 15px;
+    float: left;
 }
-
-.pages{
+  
+li a{
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
     text-decoration: none;
-    color: #000;
-    font-weight: bold;
-}
-
-.navbar{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 10px 20px;
-    background-color: #f4f4f4;
 }
