--- a/design.css
+++ b/design.css
@@ -7,26 +7,29 @@ body{
     padding: 10px;
 }
 
-ul{
+ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
     background-color: #333;
-    display: inline;
-}
-
-li{
-    float: left;
-}
+  }
   
-li a{
+li {
+    float: left;
+  }
+  
+li a {
     display: block;
     color: white;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-}
+  }
+  
+li a:hover {
+    background-color: #111;
+  }
 
 #content{
     align-items: center;
