--- a/design.css
+++ b/design.css
@@ -9,26 +9,27 @@ body {
     background-color: #333;
     padding: 30px 20px;
     color: white;
+    height: 30px;
 }
-.navbar .site-name {
+.navbar .site-name{
     font-size: 24px;
     font-weight: bold;
 }
-.navbar ul {
+.navbar ul{
     list-style: none;
     margin: 0;
     padding: 0;
     display: flex;
 }
-.navbar ul li {
+.navbar ul li{
     margin-left: 20px;
 }
-.navbar ul li a {
+.navbar ul li a{
     text-decoration: none;
     color: white;
     font-size: 16px;
     transition: color 0.2s;
 }
-.navbar ul li a:hover {
+.navbar ul li a:hover{
     color: #f4a261;
 }
